Update index.html: Tambah tombol music player

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!-- Intro/Splash Page -->
     <div class="intro-page" id="introPage">
       <div class="intro-content">
-        <h1 class="intro-names">Elizabeth & James</h1>
-        <div class="intro-date">08.15.2025</div>
-        <p>We're getting married! Please join us to celebrate our special day.</p>
-        <button class="enter-btn" id="enterSite">Enter Website</button>
+        <h1 class="intro-names">Elisa Rahmawati & Randina Farizi</h1>
+        <div class="intro-date">08.05.2025</div>
+        <p>Dengan penuh cinta dan harapan, kami akan mengikat janji suci. Mohon do’a restu dan kehadiranmu untuk menyaksikan awal perjalanan kami yang penuh berkah.</p>
+        <button class="enter-btn" id="enterSite">Open Invitation</button>
       </div>
     </div>
 
@@ -57,8 +57,8 @@
       <div class="overlay"></div>
       <div class="container text-center hero-content">
         <div class="save-date mb-4">Save the Date</div>
-        <h1 class="couple-name">Elizabeth & James</h1>
-        <div class="wedding-date mt-4">08 • 15 • 2025</div>
+        <h1 class="couple-name">Elisa Rahmawati & Randina Farizi</h1>
+        <div class="wedding-date mt-4">08 • 05 • 2025</div>
         <div class="scroll-down mt-5">
           <a href="#couple">
             <i class="fas fa-chevron-down"></i>
@@ -345,9 +345,9 @@
     <!-- Footer -->
     <footer class="footer-section">
       <div class="container text-center">
-        <h3 class="mb-4">Elizabeth & James</h3>
+        <h3 class="mb-4">Elisa Rahmawati & Randina Farizi</h3>
         <p>We can't wait to celebrate with you!</p>
-        <div class="footer-date">08.15.2025</div>
+        <div class="footer-date">08.05.2025</div>
         <div class="social-links mt-4">
           <a href="#"><i class="fab fa-instagram"></i></a>
           <a href="#"><i class="fab fa-facebook"></i></a>
